--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.1.0",
+    "@tanstack/react-query-devtools": "^4.0.10",
+    "axios": "^0.27.2",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -18,6 +21,7 @@
     "@types/node": "18.7.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "@types/react-query": "^1.2.9",
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
