--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@tanstack/react-query": "^4.1.0",
     "@tanstack/react-query-devtools": "^4.0.10",
     "axios": "^0.27.2",
+    "daisyui": "^2.24.0",
     "next": "12.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
