--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@tanstack/react-query": "^4.1.0",
     "@tanstack/react-query-devtools": "^4.0.10",
     "axios": "^0.27.2",
