--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "axios": "^0.27.2",
     "daisyui": "^2.24.0",
     "next": "12.2.4",
+    "next-auth": "^4.10.3",
+    "next-themes": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-query": "^4.0.0"
