--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next-themes": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-player": "^2.10.1",
     "react-query": "^4.0.0"
   },
   "devDependencies": {
