--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "next-themes": "^0.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-query": "^4.0.0"
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@types/node": "18.7.1",
@@ -28,7 +28,6 @@
     "@types/react-dom": "18.0.6",
     "@types/react-query": "^1.2.9",
     "autoprefixer": "^10.4.8",
-    "babel-jest": "^29.3.1",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
     "postcss": "^8.4.16",
