--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
     "@types/react-query": "^1.2.9",
+    "@vitest/coverage-c8": "^0.28.2",
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
