--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
@@ -27,14 +28,20 @@
     "@types/node": "18.7.1",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
-    "@types/react-query": "^1.2.9",
     "@vitest/coverage-c8": "^0.28.2",
     "autoprefixer": "^10.4.8",
     "eslint": "8.21.0",
     "eslint-config-next": "12.2.4",
+    "husky": "^8.0.3",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4",
     "vitest": "^0.28.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pnpm test && pnpm lint",
+      "pre-push": "pnpm test && pnpm lint && pnpm build"
+    }
   }
 }
