--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "freegames.io",
-  "version": "0.1.0",
+  "version": "0.3.0",
   "private": true,
   "scripts": {
     "test": "vitest",
@@ -9,8 +9,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prepare": "husky install",
-    "precommit": "pnpm run lint && pnpm run test"
+    "prepare": "husky install"
   },
   "dependencies": {
     "@tailwindcss/line-clamp": "^0.4.2",
@@ -38,11 +37,5 @@
     "tailwindcss": "^3.1.8",
     "typescript": "4.7.4",
     "vitest": "^0.28.2"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "pnpm test && pnpm lint",
-      "pre-push": "pnpm test && pnpm lint && pnpm build"
-    }
   }
 }
